# examples_renderer

./: .gitignore  README.md
render_speech_nasr_tts/: CMakeLists.txt  README.md  package.xml
render_speech_nasr_tts/config/: credentials.template
render_speech_nasr_tts/src/: speech_node.py
render_speech_nasr_tts/test/: test_speech_action.py
render_speech_naver_voice_tts/: CMakeLists.txt  Readme.md  package.xml
render_speech_naver_voice_tts/config/: speech_conf.template
render_speech_naver_voice_tts/src/: speech_node.py
render_speech_naver_voice_tts/test/: test_speech_action.py
